test/fixtures/configs/projects/get/byUser/fail/params/user.js
exports.notFound = {
  url: '/users/90/projects'
};

exports.notNumber = {
  url: '/users/foo/projects'
};
